k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cal-t
  namespace: cal-t
  labels:
    app: cal-t
spec:
  selector:
    app: cal-t
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
